# fintech-ai-demo

./: .gitignore  main.py  pyproject.toml  test.py
prompts/: duckdb_query_fixer_prompt.jinja2  duckdb_query_prompt copy.jinja2  duckdb_query_prompt.jinja2  field_filter_prompt.jinja2  pandas_query_prompt.jinja2
src/: helper.py  llm.py
